// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details component tests renders properly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="details card my-3 d-inline-block"
      >
        <div
          class="card-body"
        >
          <p>
            User selected: 
            <b>
              Dora Crenshaw
            </b>
          </p>
          <p
            class="d-flex"
          >
            <span
              class="mr-3"
            >
              Description:
            </span>
            <textarea
              class="form-control"
              readonly=""
            >
              amet lacus et fringilla orci
            </textarea>
          </p>
          <div>
            <p>
              Address: 
              <b>
                5670 At Ave
              </b>
            </p>
            <p>
              City: 
              <b>
                Pleasant Grove
              </b>
            </p>
            <p>
              State: 
              <b>
                PA
              </b>
            </p>
            <p>
              Index: 
              <b>
                21878
              </b>
            </p>
          </div>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="details card my-3 d-inline-block"
    >
      <div
        class="card-body"
      >
        <p>
          User selected: 
          <b>
            Dora Crenshaw
          </b>
        </p>
        <p
          class="d-flex"
        >
          <span
            class="mr-3"
          >
            Description:
          </span>
          <textarea
            class="form-control"
            readonly=""
          >
            amet lacus et fringilla orci
          </textarea>
        </p>
        <div>
          <p>
            Address: 
            <b>
              5670 At Ave
            </b>
          </p>
          <p>
            City: 
            <b>
              Pleasant Grove
            </b>
          </p>
          <p>
            State: 
            <b>
              PA
            </b>
          </p>
          <p>
            Index: 
            <b>
              21878
            </b>
          </p>
        </div>
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Details component tests renders properly without address and description 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="details card my-3 d-inline-block"
      >
        <div
          class="card-body"
        >
          <p>
            User selected: 
            <b>
              Randy Bunch
            </b>
          </p>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="details card my-3 d-inline-block"
    >
      <div
        class="card-body"
      >
        <p>
          User selected: 
          <b>
            Randy Bunch
          </b>
        </p>
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
